Put the UI on RPS prject
but still not work

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
-,<script src="JS_script_1"></script>
+    <link rel="stylesheet" href="./CSS_Style_1.css">
+  </head>
+  <body>
+    <h1 class = "title">剪刀 石頭 布</h1>
+    <div class="UserHand">
+      <button class="Scissors button">
+        <h1 class="emoji">✌</h1>
+        <h3 class="text">耶~~</h3>
+      </button>
+
+      <button class="Rock button">
+        <h1 class="emoji">✊</h1>
+        <h3 class="text">俗投</h3>
+      </button>
+
+      <button class="Paper button">
+        <h1 class="emoji">🖐</h1>
+        <h3 class="text">give me 5</h3>
+      </button>
+    </div>
+  </body>
+  <script src="JS_script_1"></script>
 </html>
