--- a/index.html
+++ b/index.html
@@ -3,27 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./CSS_Style_1.css">
+    <title>酷酷的猜拳</title>
+    <link rel="stylesheet" href="./CSS_Style_1.css" />
   </head>
   <body>
-    <h1 class = "title">剪刀 石頭 布</h1>
+    <h1 class="title">酷酷猜拳</h1>
+    <div class="statusOut" id="statusOut">
+      <h2 class="status" id="status">來玩猜拳吧！先贏 5 次的贏！</h2>
+    </div>
+
+    <div class="showStatus">
+      <hi class="Score" id = "PlayerScore">玩家　分</hi>
+      <!-- <img class="img" src="img/A.png" style="width: 10%;" alt = "玩家出拳"> -->
+      <hi class="handShow" id = "PlayerHand"></hi>
+      <hi class="handShow" id = "ComputerHand"></hi>
+      <!-- <img class="img" src="img/A.png" style="width: 10%;" alt = "玩家出拳"> -->
+      <hi class="Score" id = "ComputerScore">電腦　分</hi>
+    </div>
+    .
+
     <div class="UserHand">
-      <button class="Scissors button">
+      <button class="Scissors button" id = "s">
         <h1 class="emoji">✌</h1>
-        <h3 class="text">耶~~</h3>
+        <!-- <h3 class="btu_text">耶~~</h3> -->
       </button>
 
-      <button class="Rock button">
+      <button class="Rock button" id = "r">
         <h1 class="emoji">✊</h1>
-        <h3 class="text">俗投</h3>
+        <!-- <h3 class="btu_text">俗投</h3> -->
       </button>
 
-      <button class="Paper button">
+      <button class="Paper button" id = "p">
         <h1 class="emoji">🖐</h1>
-        <h3 class="text">give me 5</h3>
+        <!-- <h3 class="btu_text">give me 5</h3> -->
       </button>
     </div>
   </body>
-  <script src="JS_script_1"></script>
+  <script src="JS_script_1.js"></script>
 </html>
