Charnge font style

--- a/index.html
+++ b/index.html
@@ -5,35 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>酷酷的猜拳</title>
     <link rel="stylesheet" href="./CSS_Style_1.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1 class="title">酷酷猜拳</h1>
+    <h1 class="title">猜拳決勝負吧</h1>
     <div class="statusOut" id="statusOut">
       <h2 class="status" id="status">來玩猜拳吧！先贏 5 次的贏！</h2>
     </div>
 
     <div class="showStatus">
-      <hi class="Score" id = "PlayerScore">玩家　分</hi>
+      <hi class="Score" id="PlayerScore">玩家　分</hi>
       <!-- <img class="img" src="img/A.png" style="width: 10%;" alt = "玩家出拳"> -->
-      <hi class="handShow" id = "PlayerHand"></hi>
-      <hi class="handShow" id = "ComputerHand"></hi>
+      <hi class="handShow" id="PlayerHand"></hi>
+      <hi class="handShow" id="ComputerHand"></hi>
       <!-- <img class="img" src="img/A.png" style="width: 10%;" alt = "玩家出拳"> -->
-      <hi class="Score" id = "ComputerScore">電腦　分</hi>
+      <hi class="Score" id="ComputerScore">電腦　分</hi>
     </div>
     .
 
     <div class="UserHand">
-      <button class="Scissors button" id = "s">
+      <button class="Scissors button" id="s">
         <h1 class="emoji">✌</h1>
         <!-- <h3 class="btu_text">耶~~</h3> -->
       </button>
 
-      <button class="Rock button" id = "r">
+      <button class="Rock button" id="r">
         <h1 class="emoji">✊</h1>
         <!-- <h3 class="btu_text">俗投</h3> -->
       </button>
 
-      <button class="Paper button" id = "p">
+      <button class="Paper button" id="p">
         <h1 class="emoji">🖐</h1>
         <!-- <h3 class="btu_text">give me 5</h3> -->
       </button>
